Code optimisations and readability